ajout modification index/css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <title>VCard Alyson Martin</title>
+</head>
+<body>
+    <img src="photo.png">
+    <div class="base">
+        <p><strong>Alyson Martin</strong></p>
+        <p>BeCode</p>
+        <p>Junior Web<br>Developpement</p>
+    </div>
+    <div class="info">
+        <p>+32 499/10.28.26</p>
+        <p>aly.martin.97@gmail.com</p>
+        <p>Avenue de la Victoire, 56<br>6840 Neufchateau</p>
+    </div>
+    <div class="lien">
+        <p><a href="https://www.linkedin.com/in/alyson-martin-021559153/">Linkedin</a></p>
+        <p><a href="https://www.instagram.com/alyson_martin/?hl=fr">Instagram</a></p>
+        <p><a href="file:///home/becode/becodeAly/Mon-CV/index.html">Mon CV</a></p>
+    </div>
 
+    
+</body>
+</html>
